--- a/ui/app/stylesheets/settings/colors.sass
+++ b/ui/app/stylesheets/settings/colors.sass
@@ -1,14 +1,2 @@
-// --------------------------------------------------------------------------
-// colors.sass
-// --------------------------------------------------------------------------
-// This file assigns all hex colors to variables
-// --------------------------------------------------------------------------
-// All names are genereted using 'http://chir.ag/projects/name-that-color'
-// --------------------------------------------------------------------------
-
-//***********************************
-// Greyscale
-//***********************************
-
-$black: #000
-$white: #fff
+$brand-color: #ae2424
+$copy-color: #292929
