--- a/ui/app/stylesheets/settings/fonts.sass
+++ b/ui/app/stylesheets/settings/fonts.sass
@@ -1,17 +1,3 @@
-// --------------------------------------------------------------------------
-// fonts.sass
-// --------------------------------------------------------------------------
-// This file assigns gloablly used fonts to variables
-// --------------------------------------------------------------------------
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,800italic,800,700italic,700,600italic,600,400italic,300italic,300")
 
-//***********************************
-// @font-face rules
-//***********************************
-
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700italic,700,800,800italic)
-
-//***********************************
-// Customs
-//***********************************
-
-$opensans: 'Open Sans', sans-serif
+$base-font: 'Open Sans', sans-serif
