--- a/ui/app/stylesheets/tools/mixins/list.sass
+++ b/ui/app/stylesheets/tools/mixins/list.sass
@@ -1,17 +1,4 @@
-// --------------------------------------------------------------------------
-// list.sass
-// --------------------------------------------------------------------------
-// This mixin outputs a bulleted list base on the bullet color passed in
-// --------------------------------------------------------------------------
-
-=custom-list($bullet-color: $base-color)
+%list
+  margin: 0
+  padding: 0
   list-style: none
-  li
-    padding-left: spacing(2)
-    position: relative
-    &:before
-      +size(7px)
-      +position(absolute, 5px null null 0)
-      background-color: $bullet-color
-      content: ""
-      display: block
