--- a/ui/partials/footer.dot.html
+++ b/ui/partials/footer.dot.html
@@ -1,3 +1,3 @@
-<footer role="contentinfo">
-  Footer
+<footer role="contentinfo" class="footer">
+  <p class="footer__copy">&copy;J.Parré Apparel 2016</p>
 </footer>
