--- a/ui/partials/header.dot.html
+++ b/ui/partials/header.dot.html
@@ -1,3 +1,6 @@
-<header role="banner">
-  Header
+<header class="header">
+  <a href="/" class="header__logo">
+    <img src="app/images/content/jparre-logo.svg" alt="J.Parré Apparel" />
+  </a>
+  <h1 class="header__title">J.Parré</h1>
 </header>
