--- a/ui/app/stylesheets/modules/button.sass
+++ b/ui/app/stylesheets/modules/button.sass
@@ -6,7 +6,9 @@
   text-decoration: none
   font-size: 12px
   font-weight: 600
+  background: transparent
 
-  &:hover
+  &:not(&--disabled):hover
     background: #000
     color: #fff
+    cursor: pointer
