button outline and product selects

--- a/ui/app/stylesheets/modules/button.sass
+++ b/ui/app/stylesheets/modules/button.sass
@@ -7,6 +7,7 @@
   font-size: 12px
   font-weight: 600
   background: transparent
+  outline: none
 
   &:not(&--disabled):hover
     background: #000
