--- a/ui/app/stylesheets/modules/product.sass
+++ b/ui/app/stylesheets/modules/product.sass
@@ -23,13 +23,16 @@
 
   &__price
     @extend %copy
-    margin-left: 10px
     font-style: italic
 
   &__actions
     +display(flex)
     +align-items(center)
     padding-bottom: 10px
+
+    .selector-wrapper
+      +flex(none)
+      margin-right: 10px
 
   +breakpoint(xsmall)
     display: block
