--- a/ui/app/stylesheets/modules/select.sass
+++ b/ui/app/stylesheets/modules/select.sass
@@ -1,10 +1,13 @@
-.select
+.selector-wrapper
   position: relative
   border: 2px solid #000
   display: inline-block
   z-index: 1
   overflow: hidden
 
+  label
+    display: none
+  
   &:after
     +position(absolute, 50% 0px null null)
     +size(8px)
@@ -30,16 +33,16 @@
     margin-right: -30px
 
 @-moz-document url-prefix() 
-  .select
+  .selector-wrapper
     overflow: hidden
-  .select select
+  .selector-wrapper select
     width: 120%
     width: -moz-calc(100% + 3em)
     width: calc(100% + em)
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
-  .select select::-ms-expand
+  .selector-wrapper select::-ms-expand
     display: none
-  .select select:focus::-ms-value
+  .selector-wrapper select:focus::-ms-value
     background: transparent
     color: #222
