--- a/ui/app/stylesheets/modules/button.sass
+++ b/ui/app/stylesheets/modules/button.sass
@@ -8,6 +8,7 @@
   font-weight: 600
   background: transparent
   outline: none
+  border-radius: 0px
 
   &:not(&--disabled):hover
     background: #000
