--- a/ui/app/stylesheets/application.sass
+++ b/ui/app/stylesheets/application.sass
@@ -15,6 +15,7 @@
 @import 'settings/colors'
 @import 'settings/fonts'
 @import 'settings/breakpoints'
+@import 'settings/selectron'
 
 //***********************************
 // Tools
