--- a/ui/app/stylesheets/tools/mixins/copy.sass
+++ b/ui/app/stylesheets/tools/mixins/copy.sass
@@ -2,7 +2,7 @@
   margin: 0
   font-family: $base-font
   font-weight: 400
-  font-size: 14px
-  color: $copy-color
-  line-height: 1.3
+  font-size: 12px
+  line-height: 1.5
+  color: #222
   -webkit-font-smoothing: antialiased
