--- a/ui/app/stylesheets/blocks/button.sass
+++ b/ui/app/stylesheets/blocks/button.sass
@@ -2,9 +2,9 @@
   +padding(5px 20px)
   @extend %copy
   display: inline-block
+  line-height: 1.3
   border: 2px solid #000
   text-decoration: none
-  font-size: 12px
   font-weight: 600
   background: transparent
   outline: none
