--- a/ui/app/stylesheets/modules/banner.sass
+++ b/ui/app/stylesheets/modules/banner.sass
@@ -1,33 +1,14 @@
 .banner
-  width: 100%
-  min-height: 100%
-  background-image: url('../images/content/home-banner.jpg')
-  background-size: cover
+  +padding(20px)
+  background-image: url('../images/content/banner-background.jpg')
+  background-size: 100% auto
   background-position: center
-  box-sizing: border-box
-  border: 20px solid #fff
-  display: table
-
-  &__header
-    +padding(25px null)
-    display: table-cell
-    vertical-align: middle
-    text-align: center
+  margin-bottom: 20px
 
   &__logo
-    +margin(null auto 20px)
-    width: 80px
+    +size(80px)
     display: block
 
     img
       width: 100%
       display: block
-
-  &__title
-    @extend %heading
-    text-transform: uppercase
-    padding-bottom: 20px
-
-  &__copy
-    @extend %copy
-    padding-bottom: 25px
