--- a/ui/partials/footer.dot.html
+++ b/ui/partials/footer.dot.html
@@ -1,4 +1,6 @@
-<footer class="footer">
-  <p class="footer__copy">&copy;J.Parré Apparel 2016</p>
-  <a href="#" class="button">Cart (0)</a>
-</footer>
+<div class="wrapper">
+  <footer class="footer">
+    <p class="footer__copy">&copy;J.Parré Apparel 2016</p>
+    <a href="#" class="button">Cart (0)</a>
+  </footer>
+</div>
