--- a/ui/layouts/application.dot.html
+++ b/ui/layouts/application.dot.html
@@ -2,16 +2,33 @@
 <!--[if IE 9]>          <html class="no-js lt-ie10" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!-->  <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <title>{{= it.document.title }}</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-  <link rel="stylesheet" href="app/stylesheets/application.css" />
-</head>
-<body>
-  {{= it.document }}
+  <meta charset="utf-8" />
 
-  <!-- Javascript -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="app/javascript/application.js"></script>
+  <title>
+  {{ shop.name }} &ndash; {{ page_title }}
+  </title>
+
+  {% if page_description %}
+    <meta name="description" content="{{ page_description | escape }}" />
+  {% endif %}
+
+  <meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+  <meta name="keywords" content="jparre, j.parre, j.parré, apparel, jparre apparel, j.parre apparel, j.parré apparel, clothing, uk, screen printing, merch, london, street wear">
+
+  {{ content_for_header }}
+
+  {{ 'style.scss.css' | asset_url | stylesheet_tag }}
+
+  {% if template contains 'customers' %}
+    {{ 'customer_area.js'  | shopify_asset_url | script_tag }}
+  {% endif %}
+  
+  {{ 'option_selection.js' | shopify_asset_url | script_tag }}
+  {{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}
+</head>
+<body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
+  {{ content_for_layout }}
+
+  {{ 'application.js'  | asset_url | script_tag }}
 </body>
 </html>
