--- a/src/stylesheets/components/carousel.sass
+++ b/src/stylesheets/components/carousel.sass
@@ -2,11 +2,13 @@
   display: flex
   align-items: center
   justify-content: space-around
-  min-height: 75vh
 
   > *
-    flex: none
+    flex-shrink: 1
 
   &__image
     width: 500px
-    display: block
+
+    img
+      display: block
+      width: 100%
