listing and product page styling

--- a/src/stylesheets/components/product.sass
+++ b/src/stylesheets/components/product.sass
@@ -1,4 +1,4 @@
-.listing
+.product
   display: block
   background: #fafafa
   position: relative
@@ -10,5 +10,5 @@
     left: 50%
     transform: translate(-50%, -50%)
     display: block
-    max-width: 95%
-    max-height: 95%
+    max-width: 90%
+    max-height: 90%
