--- a/src/stylesheets/generic/wrapper.sass
+++ b/src/stylesheets/generic/wrapper.sass
@@ -1,6 +1,8 @@
 .wrapper
   margin: 0 auto
-  padding: 0 10px
-  width: 550px
+  width: 1200px
   max-width: 100%
-  box-sizing: border-box
+  overflow: hidden
+
+  &--slim
+    width: 700px
