--- a/src/stylesheets/generic/actions.sass
+++ b/src/stylesheets/generic/actions.sass
@@ -1,14 +1,13 @@
-.intro
+.actions
   text-align: center
-  padding: 60px 0px 100px
+  padding: 60px 0px
 
   &__link
     +ext(copy)
     text-decoration: none
-    color: #000
 
     &:hover
       text-decoration: underline
 
   @media all and (max-width: 767px)
-    padding: 30px 0px 50px
+    padding: 30px 0px
