--- a/src/stylesheets/generic/page.sass
+++ b/src/stylesheets/generic/page.sass
@@ -2,6 +2,8 @@
   display: flex
   flex-direction: column
   min-height: 100vh
+  padding-bottom: 30px
+  box-sizing: border-box
 
   > *
     flex: none
@@ -13,3 +15,6 @@
 
   &__inner
     margin: auto 0px
+
+  @media all and (max-width: 767px)
+    padding-bottom: 0px
