--- a/src/stylesheets/settings/fonts.sass
+++ b/src/stylesheets/settings/fonts.sass
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans')
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700')
 $base-font: 'Open Sans', sans-serif
