purchase instead of cart

--- a/src/stylesheets/generic/detail.sass
+++ b/src/stylesheets/generic/detail.sass
@@ -2,8 +2,7 @@
   padding: 30px 20px
 
   &__title
-    +ext(copy)
-    font-size: 20px
+    +ext(heading)
     padding-bottom: 10px
 
   &__actions
@@ -19,3 +18,8 @@
   &__price
     +ext(copy)
     font-style: italic
+    padding-bottom: 5px
+
+  &__sold-out
+    +ext(copy)
+    color: red
