--- a/src/stylesheets/settings/fonts.sass
+++ b/src/stylesheets/settings/fonts.sass
@@ -1,2 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700')
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
+
 $base-font: 'Open Sans', sans-serif
+$heading-font: 'Playfair Display', serif
