--- a/src/stylesheets/components/footer.sass
+++ b/src/stylesheets/components/footer.sass
@@ -2,11 +2,11 @@
 @import '../mixins/*'
 
 .footer
-  padding: 60px 0px
+  padding-top: 60px
   text-align: center
 
   &__copy
     +ext(copy)
 
   @media all and (max-width: 767px)
-    padding: 30px 0px
+    padding-top: 30px
