--- a/src/stylesheets/generic/actions.sass
+++ b/src/stylesheets/generic/actions.sass
@@ -1,6 +1,6 @@
 .actions
   text-align: center
-  padding: 60px 0px
+  padding-top: 60px
 
   &__link
     +ext(copy)
@@ -10,4 +10,4 @@
       text-decoration: underline
 
   @media all and (max-width: 767px)
-    padding: 30px 0px
+    padding-top: 30px
