--- a/src/stylesheets/generic/page.sass
+++ b/src/stylesheets/generic/page.sass
@@ -2,7 +2,7 @@
   display: flex
   flex-direction: column
   min-height: 100vh
-  padding-bottom: 30px
+  padding-bottom: 100px
   box-sizing: border-box
 
   > *
@@ -15,3 +15,6 @@
 
   &__inner
     margin: auto 0px
+
+  @media all and (max-width: 767px)
+    padding-bottom: 60px
