--- a/src/stylesheets/generic/page.sass
+++ b/src/stylesheets/generic/page.sass
@@ -12,6 +12,10 @@
     flex: 1
     display: flex
     flex-direction: column
+    
+    &--actioned
+      cursor: e-resize
+      -webkit-tap-highlight-color: transparent
 
   &__inner
     margin: auto 0px
