stockists page build

--- a/src/stylesheets/components/footer.sass
+++ b/src/stylesheets/components/footer.sass
@@ -2,11 +2,30 @@
 @import '../mixins/*'
 
 .footer
-  padding-top: 60px
-  text-align: center
+  padding: 0 10px
+  background: #fafafa
 
-  &__copy
+  &__list
+    list-style: none
+    margin: 0
+    padding: 0
+
+  &__item
+    display: inline-block
+
+    &:not(:last-child):after
+      border-radius: 50%
+      content: ''
+      margin: 0 10px
+      display: inline-block
+      vertical-align: middle
+      height: 3px
+      width: 3px
+      background: #000
+
+  &__link
     +ext(copy)
+    text-decoration: none
 
-  @media all and (max-width: 767px)
-    padding-top: 30px
+    &:hover
+      text-decoration: underline
