--- a/src/stylesheets/components/footer.sass
+++ b/src/stylesheets/components/footer.sass
@@ -2,30 +2,11 @@
 @import '../mixins/*'
 
 .footer
-  padding: 0 10px
-  background: #fafafa
+  padding-top: 60px
+  text-align: center
 
-  &__list
-    list-style: none
-    margin: 0
-    padding: 0
-
-  &__item
-    display: inline-block
-
-    &:not(:last-child):after
-      border-radius: 50%
-      content: ''
-      margin: 0 10px
-      display: inline-block
-      vertical-align: middle
-      height: 3px
-      width: 3px
-      background: #000
-
-  &__link
+  &__copy
     +ext(copy)
-    text-decoration: none
 
-    &:hover
-      text-decoration: underline
+  @media all and (max-width: 767px)
+    padding-top: 30px
