--- a/src/stylesheets/components/carousel.sass
+++ b/src/stylesheets/components/carousel.sass
@@ -23,8 +23,11 @@
       flex-shrink: 1
 
   &__image
-    width: 470px
+    max-width: 470px
 
     img
       display: block
       width: 100%
+    
+    &--large
+      max-width: 800px
