--- a/src/stylesheets/generic/nav.sass
+++ b/src/stylesheets/generic/nav.sass
@@ -3,7 +3,7 @@
   display: flex
   justify-content: center
   margin: 0 -5px 0 0
-  padding: 60px 0 0
+  padding: 0 0 30px 0
 
   > *
     flex: none
