--- a/src/stylesheets/generic/button.sass
+++ b/src/stylesheets/generic/button.sass
@@ -1,12 +1,38 @@
 .button
   +ext(copy)
-  padding: 6px 15px
-  color: #fff
-  display: inline-block
   background: #000
   border: 0
-  outline: none
+  border: 1px solid #000
+  box-sizing: border-box
+  color: #fff
+  cursor: pointer
+  display: inline-block
   font-weight: 700
+  outline: none
+  overflow: hidden
+  padding: 5px 12px
+  position: relative
   text-decoration: none
   text-transform: uppercase
-  cursor: pointer
+  transition: color .3s cubic-bezier(0.77, 0, 0.175, 1)
+  z-index: 1
+
+  &:before
+    background: #fff
+    border-radius: 50%
+    content: ''
+    display: block
+    left: 50%
+    padding-top: 110%
+    position: absolute
+    top: 50%
+    transform: translate3d(-50%, -50%, 0) scale(0)
+    transition: transform .3s cubic-bezier(0.77, 0, 0.175, 1)
+    width: 110%
+    z-index: -1
+
+  &:hover
+    color: #000
+
+    &:before
+      transform: translate3d(-50%, -50%, 0) scale(1)
