--- a/src/stylesheets/components/product.sass
+++ b/src/stylesheets/components/product.sass
@@ -12,3 +12,10 @@
     display: block
     max-width: 75%
     max-height: 75%
+
+  &__icon
+    position: absolute
+    top: 20px
+    right: 20px
+    width: 15px
+    height: 15px
